Added accessibility feature for Buttons and entries so that, using talk back feature user can listen about the buttons and entries on the screen. Added suitable  description for each item which is used as read out text.  These accessibility features will help the user to easily distinguish the contents on the screen and use gestures accordingly to interact with the application.

--- a/JobManager/Views/MapPage.xaml
+++ b/JobManager/Views/MapPage.xaml
@@ -14,7 +14,9 @@
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
 
-            <Button Text="Get Location" Command="{Binding GetLocationCommand}" />
+             <Button Text="Get Location" Command="{Binding GetLocationCommand}"
+                     AutomationProperties.IsInAccessibleTree="True"
+                        AutomationProperties.HelpText="Gtets your device location"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
