--- a/JobManager/Views/JobDetailPage.xaml
+++ b/JobManager/Views/JobDetailPage.xaml
@@ -20,14 +20,36 @@
     </ContentPage.Behaviors>
 
     <ContentPage.Content>
-        <RefreshView Command="{Binding RefreshCommand}" IsRefreshing="{Binding IsBusy}">
-            <StackLayout Margin="20" VerticalOptions="FillAndExpand">
-                <Label Text="Name:" FontSize="Medium" />
-                <Entry Text="{Binding Name}" FontSize="Small"/>
-                <Label Text="Description:" FontSize="Medium" />
-                <Entry Text="{Binding Description}" FontSize="Small"/>
-                <Button Text="Save" Command="{Binding SaveCommand}" />
-                <Button Text="Take Picture" Command="{Binding TakePictureCommand}" />
+            <RefreshView Command="{Binding RefreshCommand}" IsRefreshing="{Binding IsBusy}">
+                <StackLayout Margin="20" VerticalOptions="FillAndExpand">
+
+                  <Label x:Name="NameLabel" Text="Name:" FontSize="Medium" />
+
+                  <Entry
+                        Text="{Binding Name}"
+                        FontSize="Small"
+                        AutomationProperties.IsInAccessibleTree="True"
+                        AutomationProperties.LabeledBy="{x:Reference NameLabel}"/>
+
+
+                 <Label x:Name="DescriptionLabel" Text="Description:" FontSize="Medium" />
+
+                 <Entry
+                        Text="{Binding Description}"
+                        FontSize="Small"
+                        AutomationProperties.IsInAccessibleTree="True"
+                        AutomationProperties.LabeledBy="{x:Reference DescriptionLabel}"/>
+
+
+                 <Button Text="Save" Command="{Binding SaveCommand}"
+                           AutomationProperties.IsInAccessibleTree="True"
+                            AutomationProperties.HelpText="Press to save button"/>
+
+
+
+                <Button Text="Take Picture" Command="{Binding TakePictureCommand}"
+                             AutomationProperties.IsInAccessibleTree="True"
+                            AutomationProperties.HelpText="Press button to take a picture."/>
                 <Image Source="{Binding Picture}"/>
 
                 <Label Text="Pictures:" FontSize="Large" />
