--- a/JobManager/Views/WelcomePage.xaml
+++ b/JobManager/Views/WelcomePage.xaml
@@ -16,7 +16,10 @@
 
             <Label Text="Orientation: " FontSize="Medium" />
             <Label Text="{Binding Orientation}" FontSize="Large" />
-            <Button Text="Get Orientation" Command="{Binding GetOrientationCommand}" />
+            <Button Text="Get Orientation"
+                    Command="{Binding GetOrientationCommand}"
+                    AutomationProperties.IsInAccessibleTree="True"
+                    AutomationProperties.HelpText="Updates the orientation label"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
