--- a/JobManager/Views/JobDetailPage.xaml
+++ b/JobManager/Views/JobDetailPage.xaml
@@ -66,7 +66,9 @@
                                     <Image
                                         Source="{Binding Source}"
                                         WidthRequest="200"
-                                        HeightRequest="200"/>
+                                        HeightRequest="200"
+                                        AutomationProperties.IsInAccessibleTree="true"
+                                        AutomationProperties.Name="{Binding Description}"/>
                                 </StackLayout>
                             </ViewCell>
                         </DataTemplate>
